@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "b1.0-5"
+version = "b1.0-6"
 group= "shotyourscreen" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ShotYourScreen"
 
