@@ -1,0 +1,10 @@
+package shotyourscreen.client;
+
+import cpw.mods.fml.relauncher.Side;
+import cpw.mods.fml.relauncher.SideOnly;
+
+@SideOnly(Side.CLIENT)
+public class ServerSupport
+{
+	public static boolean SERVER_SUPPORT = false;
+}
