@@ -2,13 +2,18 @@ package shotyourscreen.proxy;
 
 import java.io.File;
 
+import net.minecraft.command.CommandHandler;
+import net.minecraftforge.client.ClientCommandHandler;
 import shotyourscreen.ShotYourScreen;
 import shotyourscreen.awt.SYSFrame;
 import shotyourscreen.client.KeyHandler;
+import shotyourscreen.command.CommandBrowseImg;
+import shotyourscreen.event.EventClient;
 import cpw.mods.fml.common.event.FMLInitializationEvent;
 import cpw.mods.fml.common.event.FMLPostInitializationEvent;
 import cpw.mods.fml.common.event.FMLPreInitializationEvent;
 import cpw.mods.fml.relauncher.Side;
+import danylibs.EventBusHelper;
 
 public class ClientProxy implements IProxy
 {
@@ -28,6 +33,8 @@ public class ClientProxy implements IProxy
 	{
 		ShotYourScreen.keyHandler = new KeyHandler();
 		ShotYourScreen.keyHandler.initKeybindings();
+		EventBusHelper.checkBusAndRegister(new EventClient());
+		ClientCommandHandler.instance.registerCommand(new CommandBrowseImg());
 	}
 
 	@Override
